--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -12,6 +12,8 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/components/semantic-ui/dist/semantic.min.css" />
     <link rel="stylesheet" href="/components/vegas/dist/jquery.vegas.min.css" />
+    <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.min.css" />
+
     <link rel="stylesheet" href="/css/style.css" />
     <!-- Via CDN -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -39,4 +41,3 @@
         </li>
     </ul>
 </div>
-
