--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -3,10 +3,10 @@
 <div class="ui middle aligned page grid main">
 	<div class="row">
 		<div class="six wide column">
-			<h2 class="ui top red inverted attached segment header ">
-				Informations
-			</h2>
 			<div class="ui attached segment">
+				<h1 class="ui large top attached red label">
+					Informations
+				</h1>
 				<div class="ui list">
 					<div class="item">
 						<i class="circular inverted teal user icon"></i>
@@ -40,10 +40,10 @@
 			</div>
 		</div>
 		<div class="ten wide column">
-			<h2 class="ui top blue inverted attached segment header ">
-				Contactez-nous !
-			</h2>
 			<div class="ui attached segment">
+				<h1 class="ui large top attached blue label">
+					Contactez-nous !
+				</h1>
 				<div class="ui form">
 					<div class="two fields">
 						<div class="field">
