--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -28,10 +28,10 @@
 			<div class="ui grid">
 				<div class="row">
 					<div class="column">
-						<h2 class="ui top teal inverted attached segment header">
-							Gîte et chalets à louer dans le parc naturel du Haut Languedoc
-						</h2>
 						<div class="ui attached segment description-home">
+							<h1 class="ui large top attached teal label">
+								Gîte et chalets à louer dans le parc naturel du Haut Languedoc
+							</h1>
 
 							<p>Mézouilhac, minuscule hameau de Riols, entre mer et montagne, est niché dans une petite vallée, au cœur du Parc Naturel Régional du Haut Languedoc. </p>
 
